Fix Crafting release-hardening regressions